# sc-machine

./: .gitignore  CMakeLists.txt
sc-kpm/: CMakeLists.txt
sc-kpm/exampleModule/: CMakeLists.txt
sc-kpm/exampleModule/agents/: SubdividingSearchAgent.cpp  SubdividingSearchAgent.hpp
sc-kpm/exampleModule/keynodes/: keynodes.cpp  keynodes.hpp
sc-kpm/exampleModule/specifications/agent_of_subdividing_search/: lib_component_ui_menu_subdividing_search.scs
sc-memory/sc-core/: sc_memory.c  sc_memory.h
sc-memory/sc-core/sc-store/: sc_storage.c  sc_storage.h
sc-memory/sc-memory/: sc_keynodes.cpp  sc_link.hpp  sc_memory.cpp  sc_memory.hpp  sc_scs_helper.cpp  sc_scs_helper.hpp  sc_struct.cpp  sc_type.cpp  sc_type.hpp
sc-memory/sc-memory/scs/: scs.g4
sc-memory/tests/sc-memory/templates/: sc-templates-search.cpp
tools/: CMakeLists.txt
tools/builder/src/: builder.cpp  builder.hpp  scs_translator.cpp
tools/sc_dumper/: CMakeLists.txt
tools/sc_dumper/src/: dumper.cpp  dumper.h
tools/unit_tests/: CMakeLists.txt  sc_core_test.cpp  test.cpp  test_threading.cpp
tools/unit_tests/sc-dumper/: CMakeLists.txt
tools/unit_tests/sc-dumper/units/: test_codegen.cpp  test_common.cpp  test_event.cpp  test_iterators.cpp  test_keynodes.cpp  test_python.cpp  test_sc_agent.cpp  test_sc_agent_commands.cpp  test_sc_agent_result.cpp  test_sc_common_templ.cpp  test_sc_link.cpp  test_sc_memory.cpp  test_scs_helper.cpp  test_streams.cpp  test_struct.cpp  test_templates.cpp  test_threading.cpp  test_wait.cpp  test_web_api.cpp
web/client/: package-lock.json
